--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <section class="hero is-fullheight">
     <div class="hero-body">
         <div class="container">Hello! We are
-            <h1 class="title is-1">Bancha Project!</h1>
+            <h1 class="title is-1">Bancha Project</h1>
             <h2 class="subtitle">🍵🍵🍵</h2>
         </div>
     </div>
