--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,21 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
+<!-- Title -->
 <section class="hero is-fullheight">
     <div class="hero-body">
         <div class="container">Hello! We are
             <h1 class="title is-1">Bancha Project</h1>
             <h2 class="subtitle">🍵🍵🍵</h2>
         </div>
+    </div>
+</section>
+<!-- About -->
+<section class="section is-fullheight" id="about">
+    <div class="container">
+        <h1 class="title">About</h1>
+        <p>Comming soon</p>
+        <img src="https://lh3.googleusercontent.com/CUOI8j4XaIJzChSxcgAgwLYLeEK31gumqdVAiap00CaijJnL41ZhJz7zCFnKFk3FwXpJKq_6d_-FRP4vcfVUbE96Fs549DeBnO-BsMVyiAgGzE8NWyfQSKN0gapax7rwwgqExf4-uQz-koB9WCzI0SGnuTaNt6__fy0-wIJDJfqvjSJx71WwTaUfK-Yah5bcJFpAk4aWFMGwwkFEnMSLPGa5kMp7BkpR6WB9qBaKOkb1xiDnLEyeG1dhUtraergiYJVZ2g5dX5LVUZylpuuACRsQNysMRudJ12kHVQwkYkKXft6Cb7Bf1DukyiwlECd_A4Fv8lo0QkFgjSF2gobpI6UyyjMc0MIxUAny5p_VMChd5s48eAyhpPRR_RtZKfF3PS2pEunNRYRP8mabNlOOSe7ef2SeXev5yCTrD3muBYscghdgFJQ_5i8lowkyEn4RT_eUtJNonZjWeRtKPriBDvqo7KsM7FcJMF8bwW1_5B-NyleENtJLsC7mPGkuolNr9SPdLglLb13gG3vMw1xPWkqNngtq5rxhJ5WbhabN-BUBkgmZV4qTmt1QB93ZllrtOTKFJxeHhaMPNPI2GJfhPBW1NeAU9LHHhLK4dIuMTOC4bOv5v4Ee-PTnWRUlT1t1fidlRczK4ico8E-ZYdURK4EaPyEw2tqsNlxGi03NbvKmxinNDSAgmEk7B7b4yOXm5L1eOHwOliG8NGy7ECiiFtfzaPOA65lJzfCuuNk=w925-h617-no">
     </div>
 </section>
 </body>
