--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 <!-- Title -->
-
 <section class="hero is-fullheight">
     <div class="hero-body">
         <div class="container">
@@ -30,10 +29,95 @@
     </div>
 </section>
 <!-- About -->
-<section class="section is-fullheight" id="about">
+<section class="section is-medium" id="about">
     <div class="container">
         <h1 class="title">About</h1>
         <p>Comming soon</p>
+    </div>
+</section>
+<!-- Member -->
+<section class="section is-medium" id="member">
+    <div class="container">
+        <h1 class="title">Member</h1>
+        <div class="card">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-left">
+                        <figure class="image is-48x48">
+                            <img src="https://avatars0.githubusercontent.com/u/41217418?s=400&v=4"
+                                 alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="media-content">
+                        <p class="title is-4">あひゃえもん</p>
+                        <p class="subtitle is-6">@ahyaemon</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <p>Full stack Artist</p>
+                    <p class="buttons">
+                        <a class="button" href="https://github.com/ahyaemon">
+                            <span class="icon"><i class="fab fa-github"></i></span>
+                            <span>GitHub</span>
+                        </a>
+                        <a class="button" href="https://ahyaemon.com">
+                            <span class="icon"><i class="fas fa-home"></i></span>
+                            <span>あひゃえもんのページ</span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-left">
+                        <figure class="image is-48x48">
+                            <img src="https://avatars3.githubusercontent.com/u/1651412?s=400&v=4"
+                                 alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="media-content">
+                        <p class="title is-4">円卍</p>
+                        <p class="subtitle is-6">@enmanji</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <p>Super Front-End developer</p>
+                    <p class="buttons">
+                        <a class="button" href="https://github.com/enmanji">
+                            <span class="icon"><i class="fab fa-github"></i></span>
+                            <span>GitHub</span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-left">
+                        <figure class="image is-48x48">
+                            <img src="https://avatars3.githubusercontent.com/u/24272441?s=400&v=4"
+                                 alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="media-content">
+                        <p class="title is-4">Kentama7</p>
+                        <p class="subtitle is-6">@Kentama7</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <p>Poor Programmer</p>
+                    <p class="buttons">
+                        <a class="button" href="https://github.com/Kentama7">
+                            <span class="icon"><i class="fab fa-github"></i></span>
+                            <span>GitHub</span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 </body>
