--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <section class="section is-medium" id="about">
     <div class="container">
         <h1 class="title">About</h1>
-        <p>Comming soon</p>
+        <p>Comming soon!</p>
     </div>
 </section>
 <!-- Member -->
