--- a/public/index.html
+++ b/public/index.html
@@ -103,8 +103,8 @@
                         </figure>
                     </div>
                     <div class="media-content">
-                        <p class="title is-4">Kentama7</p>
-                        <p class="subtitle is-6">@Kentama7</p>
+                        <p class="title is-4">kentama7</p>
+                        <p class="subtitle is-6">@kentama7</p>
                     </div>
                 </div>
                 <div class="content">
